@@ -118,8 +118,7 @@ creation:
 	investigate: building multiple upgrades causes loss in parts?
 	investigate: when i build thrust enhancer, my engineer reports the increased thrust BEFORE the report of finishing creation of this module... not important but strange.
 cargo:
-	
-	investigate: more than 255 items causes problems with identifying unknown componets, and construction of pulse loom
+	x investigate: more than 255 items causes problems with identifying unknown componets, and construction of pulse loom - it it fixed in all cases? see https://github.com/mnalis/ironseed_fpc/issues/76
 
 misc:
 	x faster fade transitions
